// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Field/> should render 1`] = `
<DocumentFragment>
  <div
    class="form-group"
  >
    <label
      class="field"
    >
      <span
        class="mb-2 d-block"
      >
        Label
      </span>
      <input
        class="form-control"
        data-testid="field-input"
        placeholder="Label"
        value="[object Object]"
      />
      <small
        class="text-danger form-text"
        data-testid="field-helper-text"
      >
         
      </small>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<Field/> should render with error 1`] = `
<DocumentFragment>
  <div
    class="form-group"
  >
    <label
      class="field"
    >
      <span
        class="mb-2 d-block"
      >
        Label
      </span>
      <input
        class="form-control is-invalid"
        data-testid="field-input"
        placeholder="Label"
        value="[object Object]"
      />
      <small
        class="text-danger form-text"
        data-testid="field-helper-text"
      >
        Error
      </small>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<Field/> should render with success 1`] = `
<DocumentFragment>
  <div
    class="form-group"
  >
    <label
      class="field"
    >
      <span
        class="mb-2 d-block"
      >
        Label
      </span>
      <input
        class="form-control is-valid"
        data-testid="field-input"
        placeholder="Label"
        value="[object Object]"
      />
      <small
        class="text-danger form-text"
        data-testid="field-helper-text"
      >
         
      </small>
    </label>
  </div>
</DocumentFragment>
`;

exports[`<Field/> should render without label 1`] = `
<DocumentFragment>
  <div
    class="form-group"
  >
    <label
      class="field"
    >
      <input
        class="form-control"
        data-testid="field-input"
        placeholder="Label"
        value="[object Object]"
      />
      <small
        class="text-danger form-text"
        data-testid="field-helper-text"
      >
         
      </small>
    </label>
  </div>
</DocumentFragment>
`;
